# gui

./: Cargo.toml  README.md
.github/workflows/: main.yaml
examples/apple_counter/: Cargo.toml  simple.yaml
examples/apple_counter/src/: main.rs
examples/comp_traffic_intersection/: Cargo.toml  simple.yaml
examples/comp_traffic_intersection/src/: main.rs
examples/comp_traffic_light/: Cargo.toml  build.rs  simple.yaml
examples/comp_traffic_light/src/: main.rs
examples/counter/: Cargo.toml  build.rs  gui.yaml  main.rs
examples/counter/src/: main.rs
examples/shello/: Cargo.toml
examples/shello/src/: main.rs
examples/testbed/: Cargo.toml  build.rs  simple.yaml
examples/testbed/src/: main.rs  traffic_light.rs
examples/testbuild/: Cargo.toml  simple.yaml
examples/testbuild/OUT_DIR/: Counter.ftl  Counter.rs  Holder.ftl  Holder.rs  TrafficLight.ftl  TrafficLight.rs
examples/testbuild/src/: main.rs
examples/todo/: gui.yaml  main.rs
examples/traffic_light/: Cargo.toml  simple.yaml
examples/traffic_light/src/: main.rs
gui-build/: Cargo.toml
gui-build/src/: component.rs  component_var.rs  eq_tokenstream.rs  fluent.rs  lib.rs  tokenstream.rs  widget.rs  widget_set.rs
gui-build/src/widget/: common.rs  iter.rs  overridden_widget.rs  widget_set.rs
gui-core/: Cargo.toml
gui-core/src/: comp_holder.rs  handles.rs  layout.rs  lib.rs  parse.rs  positions.rs  single_or_multi.rs  widget.rs
gui-core/src/common/: text.rs
gui-core/src/parse/: colour.rs  fluent.rs  var.rs
gui-custom/: Cargo.toml
gui-custom/src/: lib.rs
gui-custom/src/private/: assertions.rs  fakes.rs
gui-derive/: Cargo.toml
gui-derive/src/: derive.rs  lib.rs  type_registery.rs  widget_builder.rs
gui-derive/src/widget_builder/: assert.rs  attributes.rs  field_attributes.rs  interpolated_path.rs
gui-widget/: Cargo.toml
gui-widget/src/: button.rs  comp_holder.rs  hbox.rs  hvstack.rs  image.rs  lib.rs  simple.yaml  text.rs
src/: lib.rs  testing.rs  update.rs
src/testing/: messages.rs  render.rs
