[workspace]
members = [
    ".",
    "gui-derive",
    "gui-core",
    "gui-widget",
#    "examples/**",
    "examples/shello"
]

[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-core = { version = "0.1.0", path = "./gui-core" }
gui-widget = { version = "0.1.0", path = "./gui-widget" }