[workspace]
members = [
    ".",
    "gui-derive",
    "gui-core",
    "gui-widget",
    "gui-build",
#    "examples/**",
    "examples/shello",
    "examples/testbed"
]

[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-core = { version = "0.1.0", path = "./gui-core" }
gui-widget = { version = "0.1.0", path = "./gui-widget" }
instant = "0.1.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pollster = "0.3.0"