[package]
name = "gui-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-core = { version = "0.1.0", path = "./../gui-core" }
serde_yaml = "0.9.30"
anyhow = "1.0.79"
proc-macro2 = "1.0.76"
quote = "1.0.35"
unic-langid = "0.9.4"
fluent-bundle = "0.15.2"
gui-widget = {path = "./../gui-widget"}