[package]
name = "gui-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vello = { git = "https://github.com/linebender/vello", rev = "9d7c4f00d8db420337706771a37937e9025e089c" }
parley = { git = "https://github.com/dfrg/parley", rev = "2371bf4b702ec91edee2d58ffb2d432539580e1e" }
glazier = { git = "https://github.com/linebender/glazier/", rev = "b79dd1b4daf635cfcd0aca149a26bab6cb9e0972" }
typetag = "0.2.15"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
proc-macro2 = "1.0.76"
quote = "1.0.35"
fluent-syntax = "0.11.0"
itertools = "0.13.0"
dyn-clone = "1.0.16"
syn = "2.0.48"
anyhow = "1.0.79"