[package]
name = "gui-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits"] }
proc-macro2 = "1.0.76"
itertools = "0.13.0"