[package]
name = "gui-widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-core = { version = "0.1.0", path = "./../gui-core" }
serde_yaml = "0.9.30"
typetag = "0.2.15"
serde = { version = "1.0.195", features = ["derive"] }
proc-macro2 = { version = "1.0.76", features = [] }
quote = "1.0.35"
itertools = "0.12.0"