[package]
name = "gui-widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-custom = { version = "0.1.0", path = "./../gui-custom" }
serde_yaml = "0.9.30"
typetag = "0.2.15"
serde = { version = "1.0.195", features = ["derive"] }
itertools = "0.13.0"
image = "0.25.0"