[package]
name = "shello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1.12"
gui = {path = "../../."}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pollster = "0.3.0"